--- a/style.css
+++ b/style.css
@@ -235,6 +235,27 @@ h1 {
     text-align: justify;
 }
 
+.contact-contents {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    padding: 10px;
+    border: 2px solid;
+    border-color: #EF6122;
+    border-radius: 6px;
+    text-align: justify;
+}
+
+.contact-contents ol {
+    margin: 10px;
+    padding: 10px;
+}
+
+.contact-contents ol li {
+    gap: 8px;
+}
+
+
 }
 
 /* Medium devices (tablets) */
