modified temporary notice

--- a/style.css
+++ b/style.css
@@ -270,8 +270,8 @@ h1 {
 /* Medium devices (tablets) */
 @media (min-width: 601px) and (max-width: 1024px) {
 
-    .notif-bar {
-    display: none;
+    .notif-bar p{
+        font-size: 12px;
     }
 
     .navMenu {
