--- a/style.css
+++ b/style.css
@@ -244,6 +244,13 @@ h1 {
     text-align: justify;
 }
 
+.about-contents img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 5px;
+}
+
 .contact-contents {
     display: flex;
     flex-direction: column;
