--- a/style.css
+++ b/style.css
@@ -262,14 +262,24 @@ h1 {
     text-align: justify;
 }
 
+.contact-contents h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
 .contact-contents ol {
     margin: 10px;
     padding: 10px;
 }
 
 .contact-help {
-    font-size: 1.5rem;
+    font-size: 1rem;
     border-radius: 6px;
+    cursor: pointer;
+}
+
+.contact-help:hover {
+    border-color: #EF6122;
 }
 
 .contact-contents ol li {
@@ -277,21 +287,40 @@ h1 {
 }
 
 .contact-modal {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+    display: none;
     position: fixed;
     top: 0;
     padding-top: 200px;
     height: 100vh;
     width: 100vw;
-    background-color: #f0f0f079;
+    background-color:rgba(0,0,0,0.2);
     z-index: 1111;
 }
 
 .contact-modal-contents {
+    text-align: center;
     padding: 50px;
-    background-color:#f0f0f0;
+    background-color: white;
+}
+
+.contact-label {
+    font-weight: bold;
+    color: #EF6122;
+}
+
+.exit {
+    float: right;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #aaaaaa;
+    cursor: pointer;
+}
+
+.exit:hover,
+.exit:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 
@@ -373,9 +402,6 @@ h1 {
     border-radius: 6px;
     text-align: justify;
 }
-    .contact-modal {
-        display: none;
-    }
 
 }
 
@@ -437,8 +463,5 @@ h1 {
     overflow-wrap: break-word; 
     }
 
-
-    .contact-modal {
-        display: none;
-    }
+}
 }
